Improve block colors

--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -15,11 +15,13 @@
   width: 50px;
   height: 50px;
   border: 5px outset;
+  border-radius: 3px;
 }
 .inner-blok {
   width: 40px;
   height: 40px;
   border: 5px inset;
+  border-radius: 3px;
 }
 
 .blok-spacer {
@@ -30,37 +32,33 @@
 }
 
 .green.piece .blok {
-  background-color: green;
-  border-color: #009C00;
+  background-color: #209C74;
+  border-color: #21A77B;
 }
 .green.piece .inner-blok {
-  background-color: green;
-  border-color: #009400;
+  border-color: #25B587;
 }
 
 .red.piece .blok {
-  background-color: red;
-  border-color: red;
+  background-color: #A00808;
+  border-color: #C10F20;
 }
 .red.piece .inner-blok {
-  background-color: red;
-  border-color: red;
+  border-color: #C10516;
 }
 
 .yellow.piece .blok {
-  background-color: yellow;
-  border-color: yellow;
+  background-color: #F3D606;
+  border-color: #FFE949;
 }
 .yellow.piece .inner-blok {
-  background-color: yellow;
-  border-color: yellow;
+  border-color: #FFE94F;
 }
 
 .blue.piece .blok {
-  background-color: blue;
-  border-color: blue;
+  background-color: #3131B1;
+  border-color: #4040D2;
 }
 .blue.piece .inner-blok {
-  background-color: blue;
-  border-color: blue;
+  border-color: #4040D2;
 }
